--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,29 @@
 .App {
   text-align: center;
+  display: flex;
+  flex-direction: row;
+  padding: 20px;
+  max-width: 100vw;
 }
 
 img {
   max-width: 200px;
   height: auto;
+}
+
+#editor {
+  background-color: #333;
+  color: white;
+  font-size: 1.1em;
+  max-width: 100%;
+}
+#preview {
+  text-align: left;
+  padding: 0 20px;
+}
+
+code {
+  font-family: "Courier New", sans-serif;
+  background-color: lightgray;
+  color: #333;
 }
