--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,6 @@
-.App {
-  text-align: center;
-  display: flex;
-  flex-direction: row;
-  padding: 20px;
-  max-width: 100vw;
-}
-
 img {
   max-width: 200px;
   height: auto;
-}
-
-#editor {
-  background-color: #333;
-  color: white;
-  font-size: 1em;
-  width: 40vw;
-  height: 90vh;
-}
-#preview {
-  text-align: left;
-  padding: 0 20px;
-  word-wrap: break-word;
-  width: 50vw;
 }
 
 code {
@@ -30,4 +8,53 @@ code {
   background-color: #eee;
   color: #000;
   font-weight: 800;
+}
+
+@media only screen and (min-width: 600px) {
+  .App {
+    text-align: center;
+    display: flex;
+    flex-direction: row;
+    padding: 20px;
+    max-width: 100vw;
+  }
+
+  #editor {
+    background-color: #333;
+    color: white;
+    font-size: 1em;
+    width: 40vw;
+    height: 90vh;
+  }
+
+  #preview {
+    text-align: left;
+    padding: 0 20px;
+    word-wrap: break-word;
+    width: 50vw;
+  }
+}
+
+@media only screen and (max-width: 599px) {
+  .App {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+    max-width: 100vw;
+  }
+
+  #editor {
+    background-color: #333;
+    color: white;
+    font-size: 1em;
+    width: 90vw;
+    height: 40vh;
+  }
+
+  #preview {
+    text-align: left;
+    padding: 0 20px;
+    word-wrap: break-word;
+  }
 }
