--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,10 @@ img {
   height: auto;
 }
 
+h1 {
+  margin: 0 0 auto 0;
+}
+
 code {
   font-family: "Courier New", sans-serif;
   background-color: #eee;
